# Sistema-de-Chamada-Automatizada

Chamada por reconhecimento facial/Final/: CMakeLists.txt  Presencas.c  SistemaDeChamada.cpp  cadastrar_usuario.cpp  main.cpp  reconhecimento.cpp  reconhecimento.h
software/: CMakeLists.txt  cadastrar_usuario.cpp  main.cpp  pwm.c  verificar_reconhecimento.cpp
